syntax = "proto3";

package controller;

option go_package = "./controller";

message ExecuteCommandRequest {
  string command_id = 1;
  repeated string args = 2;
}

message ExecuteCommandResponse {
  bool success = 1;
  string output = 2;
  string error = 3;
  int32 exit_code = 4;
  string executed_at = 5;
}

message ListCommandsRequest {}

message CommandInfo {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ListCommandsResponse {
  repeated CommandInfo commands = 1;
}

service ControllerService {
  rpc ExecuteCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse);
  rpc ListCommands(ListCommandsRequest) returns (ListCommandsResponse);
}